fix(match2): hovering on character icon causes unwanted overflow (#7355)
* group same selector

* just adjust scale

without overengineering

--- a/stylesheets/commons/Brackets.scss
+++ b/stylesheets/commons/Brackets.scss
@@ -692,6 +692,7 @@ div.brkts-popup-body-element-thumbs {
 		width: 1.5rem;
 		height: 1.5rem;
 		border-radius: 0.25rem;
+		object-fit: cover;
 
 		@media ( max-width: 768px ) {
 			width: 1.25rem;
@@ -705,6 +706,8 @@ div.brkts-popup-body-element-thumbs {
 				outline: 0.0625rem solid #ffffff;
 				outline-offset: -0.0625rem;
 				background-color: var( --clr-background );
+				transform: scale( 1.5 ) translateY( 0.0625rem ); // added 1px to Y-center the image
+				object-fit: contain;
 			}
 		}
 	}
@@ -1028,17 +1031,6 @@ div.brkts-popup-body-element-thumbs {
 
 	&--dire img {
 		outline-color: #e79e7e;
-	}
-}
-
-.brkts-champion-icon img {
-	object-fit: cover;
-
-	@media ( hover: hover ) {
-		&:hover {
-			transform: scale( 2 ) translateY( 0.0625rem ); // added 1px to Y-center the image
-			object-fit: contain;
-		}
 	}
 }
 
